# ToolCallControl

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
example/: README.md  __init__.py  constraint_pipeline.py  event_log.py  executor.py  loop.py  main.py  model.py  proposer.py  tool_registry.py  tools.py
examples/: full_agent_example.py
src/toolcallcontrol/: __init__.py  __main__.py  aggregator.py  builtin_tools.py  classifier.py  constraint_pipeline.py  event_log.py  exceptions.py  executor.py  loop.py  model.py  openai_classifier.py  policy.py  profiles.py  proposer.py  tool_registry.py  trace.py
tests/: test_aggregator.py  test_classification_trace.py  test_constraints.py  test_executor.py  test_loop.py  test_openai_classifier.py  test_profiles.py
