[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[project]
name = "toolcallcontrol"
version = "0.2.2"
description = "Deterministic tool-calling control plane: LLMs propose; the runtime decides, executes, and logs."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "ToolCallControl contributors" }]
keywords = ["llm", "agents", "tools", "control-plane", "governance", "audit", "deterministic"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
openai = [
  "openai>=1.40.0",
]
dev = [
  "pytest>=7.4.0",
  "pytest-cov>=4.1.0",
  "ruff>=0.6.0",
  "openai>=1.40.0",
]

[project.urls]
Homepage = "https://github.com/your-org/ToolCallControl"
Documentation = "https://github.com/your-org/ToolCallControl#readme"
Repository = "https://github.com/your-org/ToolCallControl"
Issues = "https://github.com/your-org/ToolCallControl/issues"

[project.scripts]
tcc-demo = "toolcallcontrol.__main__:main"

[tool.hatch.build.targets.sdist]
include = ["/src", "/tests", "/README.md", "/LICENSE", "/ARCHITECTURE.md", "/CHANGELOG.md"]

[tool.hatch.build.targets.wheel]
packages = ["src/toolcallcontrol"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --import-mode=importlib"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.coverage.run]
branch = true
source = ["toolcallcontrol"]
